introduction to javascript assignment

--- a/index.html
+++ b/index.html
@@ -7,18 +7,31 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>JavaScript Assignment</h1>
+  <h1>Introduction to JavaScript Assignment</h1>
 
   <div id="content">
-    <p id="welcome-text">Click the button to get a greeting.</p>
-    <button id="greet-btn">Click Me</button>
-    <p id="greeting-output"></p>
+    <!-- Greeting Section -->
+    <section class="card">
+      <h2>Greeting Generator</h2>
+      <input type="text" id="name-input" placeholder="Enter your name">
+      <button id="greet-btn">Get Greeting</button>
+      <p id="greeting-output"></p>
+    </section>
 
-    <h2>Loop Results</h2>
-    <ul id="loop-list"></ul>
+    <!-- Loop Results -->
+    <section class="card">
+      <h2>African Countries Info</h2>
+      <ul id="loop-list"></ul>
+    </section>
 
-    <h2>Function Result</h2>
-    <p id="sum-output"></p>
+    <!-- Function Demo -->
+    <section class="card">
+      <h2>Add Two Numbers</h2>
+      <input type="number" id="num1" placeholder="Enter first number">
+      <input type="number" id="num2" placeholder="Enter second number">
+      <button id="sum-btn">Calculate Sum</button>
+      <p id="sum-output"></p>
+    </section>
   </div>
 
   <!-- Load JS at the end -->
